# MachineLearning

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: bug_fix_template.md  feature_template.md
.github/instructions/: tests.md
.github/workflows/: ci.yml
justscripts/: env.sh  main.sh  setup.sh  shell.sh
src/machine_learning/: main.py  model.py  utils.py
src/machine_learning/regression/: _regressor.py  linear.py  ridge.py
src/project_name/: main.py
tests/unit/regression/: test_linear_regressor.py  test_regressor.py  test_ridge.py
