[project]
name = "<project_name>"
version = "0.1.0"
description = "<description>"
authors = [{name="ZiveRael", email="papeernscal@gmail.com"}]
readme = "README.md"
dependencies = [
    "ipykernel==6.31.0", # Vs-code extension bug https://stackoverflow.com/questions/79788502/jupyter-notebook-extension-visual-studio-code-stuck-connecting-to-kernel in 7.1.0
    "pydantic==2.12.5",
    "tqdm==4.67.1",
    "typer==0.21.1",
    "scalene==2.1.0",
]
requires-python=">= 3.12, <3.13"

[tool.uv]
package = true


[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pdbpp==0.11.7",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",

    "pytest-mock==3.15.1",
    "ruff==0.14.14",
]

[project.scripts]
main = "<project_name>.main:app"

[tool.mypy]
python_version = "3.12"
files = ["<project_name>", "tests"]

plugins = [
    "pydantic.mypy",
]
exclude = [
]
warn_unused_configs = true
show_error_context = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true



[tool.ruff]
target-version = "py312"
exclude = ["notebooks"]
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
unfixable = ["F841"]
ignore = [ "ANN", "TD", "N803", "N805", "N806", "COM812", "ISC001", "E501", "D", "RUF002"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D"]
"tests/**/*.py" = [
    "ARG001",  # Unused function argument:
    "DTZ001",  # The use of `datetime.datetime()` without `tzinfo` argument is not allowed
    "EM101",   # Exception must not use a string literal, assign to variable first
    "FBT001",  # Boolean-typed positional argument in function definition
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison, consider replacing x with a constant variable
    "PT004",   # Fixture `x` does not return anything, add leading underscore
    "S101",    # Use of assert
    "SLF001",  # Private member accessed
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party"
]
lines-after-imports = 2
known-third-party = ["yaml"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.flake8-annotations]
# Configure type annotation requirements (PEP 484 compliance)
allow-star-arg-any = false
ignore-fully-untyped = false
suppress-dummy-args = true
suppress-none-returning = true


[tool.pytest.ini_options]
junit_family = "xunit2"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = "tests"
filterwarnings = [
]

[tool.coverage.report]
skip_covered = true
skip_empty = true
exclude_lines = [# list of regexes
    "pragma: no cover",
    "^if __name__ == \"__main__\":",
    "@abstractmethod",
    "@abc.abstractmethod",
    '^\s+\.\.\.\s*$',
    '.*\): \.\.\.$',
    '^\s+pass\s*$',
    "^if TYPE_CHECKING:",
    "^if typing.TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
source = ["."]
